// Vitest Snapshot v1

exports[`dropdown-menu > DropdownItem Props > : optionsLayout 1`] = `
<div
  class="t-dropdown-menu"
>
  <div
    class="t-dropdown-menu__bar"
  >
    
    <div
      class="t-dropdown-menu__item"
    >
      <div
        class="t-dropdown-menu__title"
      >
        树形双列
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-dropdown-menu__item"
    >
      <div
        class="t-dropdown-menu__title"
      >
        树形三列
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    
  </div>
  
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`dropdown-menu > DropdownItem Props > : optionsLayout 2`] = `
<div
  class="t-dropdown-menu"
>
  <div
    class="t-dropdown-menu__bar"
  >
    
    <div
      class="t-dropdown-menu__item t-is-active"
    >
      <div
        class="t-dropdown-menu__title"
      >
        树形双列
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-dropdown-menu__item"
    >
      <div
        class="t-dropdown-menu__title"
      >
        树形三列
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    
  </div>
  
  <div
    class="t-dropdown-item"
    style="top: 0px;"
  >
    <!-- &lt;t-overlay v-if="isShowItems && showOverlay" @click="onClickOverlay" /&gt; -->
    <div
      class="t-dropdown-item__content t-is-tree t-is-col2"
      style="transition: transform 200ms ease;"
    >
      <div
        class="t-dropdown-item__bd"
      >
        
        
        <!-- 树形列表 ST -->
        
        <div
          class="t-dropdown-item__tree-group"
        >
          <div
            class="t-radio-group"
            role="radiogroup"
          >
            <!--v-if-->
            
            <!-- 树形列表 - 父级节点 ST -->
            
            <div
              class="t-radio t-is-checked t-dropdown-item__radio t-is-checked"
            >
              <span
                class="t-radio__content-wrap"
              >
                <!--v-if-->
                <span
                  class="t-radio__label-wrap"
                >
                  <span
                    class="t-radio__content-title t-radio__content-right-title"
                  >
                    选项 1
                  </span>
                  <!--v-if-->
                </span>
                <span
                  class="t-radio__icon-wrap t-radio__icon-right-wrap"
                >
                  <input
                    class="t-radio__original-right"
                    name=""
                    type="radio"
                    value="options_0"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--checked t-radio__icon--custom"
                  >
                    <!---->
                  </div>
                </span>
              </span>
              <!--下边框 -->
              <!--v-if-->
            </div>
            <div
              class="t-radio t-dropdown-item__radio"
            >
              <span
                class="t-radio__content-wrap"
              >
                <!--v-if-->
                <span
                  class="t-radio__label-wrap"
                >
                  <span
                    class="t-radio__content-title t-radio__content-right-title"
                  >
                    选项 2
                  </span>
                  <!--v-if-->
                </span>
                <span
                  class="t-radio__icon-wrap t-radio__icon-right-wrap"
                >
                  <input
                    class="t-radio__original-right"
                    name=""
                    type="radio"
                    value="options_1"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--custom"
                  >
                    <!---->
                  </div>
                </span>
              </span>
              <!--下边框 -->
              <!--v-if-->
            </div>
            <div
              class="t-radio t-dropdown-item__radio"
            >
              <span
                class="t-radio__content-wrap"
              >
                <!--v-if-->
                <span
                  class="t-radio__label-wrap"
                >
                  <span
                    class="t-radio__content-title t-radio__content-right-title"
                  >
                    选项 3
                  </span>
                  <!--v-if-->
                </span>
                <span
                  class="t-radio__icon-wrap t-radio__icon-right-wrap"
                >
                  <input
                    class="t-radio__original-right"
                    name=""
                    type="radio"
                    value="options_2"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--custom"
                  >
                    <!---->
                  </div>
                </span>
              </span>
              <!--下边框 -->
              <!--v-if-->
            </div>
            
            <!-- 树形列表 - 父级节点 ED -->
            
          </div>
        </div>
        <div
          class="t-dropdown-item__tree-group"
        >
          
          <!-- 树形列表 - 叶子节点 ST -->
          
          <!-- 树形列表 - 叶子节点（多选） ST -->
          <div
            class="t-checkbox-group"
          >
            
            
            <div
              class="t-checkbox t-is-checked"
            >
              <div
                class="t-checkbox__content-wrap"
              >
                <!--v-if-->
                <span
                  class="t-checkbox__label t-checkbox__label-left"
                >
                  <span
                    style="display: -webkit-box; overflow: hidden;"
                  >
                    选项 1
                  </span>
                  <!--v-if-->
                </span>
                <span
                  class="t-checkbox__icon-right"
                >
                  <input
                    class="t-checkbox__original-right"
                    name=""
                    type="checkbox"
                    value="options_0"
                  />
                  <svg
                    class="t-icon t-icon-check-circle-filled"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
              <!--下边框 -->
              <!--v-if-->
            </div>
            <div
              class="t-checkbox t-is-checked"
            >
              <div
                class="t-checkbox__content-wrap"
              >
                <!--v-if-->
                <span
                  class="t-checkbox__label t-checkbox__label-left"
                >
                  <span
                    style="display: -webkit-box; overflow: hidden;"
                  >
                    选项 2
                  </span>
                  <!--v-if-->
                </span>
                <span
                  class="t-checkbox__icon-right"
                >
                  <input
                    class="t-checkbox__original-right"
                    name=""
                    type="checkbox"
                    value="options_1"
                  />
                  <svg
                    class="t-icon t-icon-check-circle-filled"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
              <!--下边框 -->
              <!--v-if-->
            </div>
            
            
          </div>
          <!-- 树形列表 - 叶子节点（多选） ED -->
          
          <!-- 树形列表 - 叶子节点 ED -->
          
        </div>
        
        <!-- 树形列表 ED -->
        
        
      </div>
      <div
        class="t-dropdown-item__ft"
      >
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--outline t-button--default t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            重置
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            确定
            
          </span>
        </button>
      </div>
    </div>
  </div>
  <!--v-if-->
  
</div>
`;

exports[`dropdown-menu > props > : duration 1`] = `
<div
  class="t-dropdown-menu"
>
  <div
    class="t-dropdown-menu__bar t-dropdown-menu__bar t-dropdown-menu__bar--open"
  >
    
    <div
      class="t-dropdown-menu__item t-is-disabled"
    >
      <div
        class="t-dropdown-menu__title"
      >
        菜单
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-dropdown-menu__item t-is-active"
    >
      <div
        class="t-dropdown-menu__title"
      >
        菜单
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__arrow"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11 6H5l3 4.5L11 6z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    
  </div>
  
  <!--v-if-->
  <div
    class="t-dropdown-item t-is-expanded"
    style="top: 0px;"
  >
    <!-- &lt;t-overlay v-if="isShowItems && showOverlay" @click="onClickOverlay" /&gt; -->
    <div
      class="t-dropdown-item__content t-is-single"
      style="transition: transform 500ms ease;"
    >
      <div
        class="t-dropdown-item__bd"
      >
        
        
        
        <!-- 单选列表 -->
        <div
          class="t-radio-group"
          role="radiogroup"
        >
          <!--v-if-->
          
          
          <div
            class="t-radio t-dropdown-item__radio t-is-tick"
          >
            <span
              class="t-radio__content-wrap"
            >
              <!--v-if-->
              <span
                class="t-radio__label-wrap"
              >
                <span
                  class="t-radio__content-title t-radio__content-right-title"
                >
                  选项一
                </span>
                <!--v-if-->
              </span>
              <span
                class="t-radio__icon-wrap t-radio__icon-right-wrap"
              >
                <input
                  class="t-radio__original-right"
                  name=""
                  type="radio"
                  value="option_0"
                />
                <div
                  class="t-radio__icon t-radio__icon--custom"
                >
                  <!---->
                </div>
              </span>
            </span>
            <!--下边框 -->
            <div
              class="t-radio__border t-radio__border--right"
            />
          </div>
          <div
            class="t-radio t-dropdown-item__radio t-is-tick"
          >
            <span
              class="t-radio__content-wrap"
            >
              <!--v-if-->
              <span
                class="t-radio__label-wrap"
              >
                <span
                  class="t-radio__content-title t-radio__content-right-title"
                >
                  选项二
                </span>
                <!--v-if-->
              </span>
              <span
                class="t-radio__icon-wrap t-radio__icon-right-wrap"
              >
                <input
                  class="t-radio__original-right"
                  name=""
                  type="radio"
                  value="option_1"
                />
                <div
                  class="t-radio__icon t-radio__icon--custom"
                >
                  <!---->
                </div>
              </span>
            </span>
            <!--下边框 -->
            <div
              class="t-radio__border t-radio__border--right"
            />
          </div>
          <div
            class="t-radio t-is-disabled t-dropdown-item__radio t-is-tick"
          >
            <span
              class="t-radio__content-wrap"
            >
              <!--v-if-->
              <span
                class="t-radio__label-wrap"
              >
                <span
                  class="t-radio__content-title t-is-disabled t-radio__content-right-title"
                >
                  禁用选项
                </span>
                <!--v-if-->
              </span>
              <span
                class="t-radio__icon-wrap t-radio__icon-right-wrap"
              >
                <input
                  class="t-radio__original-right"
                  disabled=""
                  name=""
                  type="radio"
                  value="disabled-item"
                />
                <div
                  class="t-radio__icon t-radio__icon--disabled t-radio__icon--custom"
                >
                  <!---->
                </div>
              </span>
            </span>
            <!--下边框 -->
            <div
              class="t-radio__border t-radio__border--right"
            />
          </div>
          
          
        </div>
        
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;
